--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<li>Slave beheer en Master lookup</li>
 					<li>Fouten tolerantie</li>
 					<li>Demo</li>
-				<ul>
+				</ul>
 			</section>
 			<section>
 				<h2>Inleiding tot het probleem</h2>
@@ -106,7 +106,7 @@
 				<ul>
 					<li>Client en masters communiceren met elkaar</li>
 					<li>Master en slaves communiceren met elkaar</li>
-				<ul>
+				</ul>
 			</section>
 			<section>
 				<h2>Architectuur</h2>
@@ -190,7 +190,7 @@
 					</section>
 				</section>
 				-->
-
+           </div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
