cleaned up img & wrote stuff

--- a/index.html
+++ b/index.html
@@ -153,6 +153,45 @@
 				</div>
 			</section>
 		</section>
+
+        <section>
+            <section>
+                <h2>Visualisation</h2>
+                <ul>
+                    <li>Inleiding</li>
+                    <li>Moeilijkheden & Keuzes</li>
+                    <li>Architectuur</li>
+                    <li>Resultaat en vergelijking</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Inleiding</h2>
+                <ul>
+                    <li>Huidige viewer in Qt geïmplementeerd</li>
+                    <li>Vraag naar OpenGL viewer</li>
+                    <li>Richting 3D (in de toekomst)</li>
+                    <li>Viewer met reliëf</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Moeilijkheden & Keuzes</h2>
+                <ul>
+                    <li>OpenGL Compatibiliteit</li>
+                    <ul class="arrows">
+                        <li>GL 3.1 + Compatibility Profile</li>
+                    </ul>
+                    <li>Gebruik van shaders? Uiteindelijk niet.</li>
+                    <li>Correcte weergave van schaduw</li>
+                </ul>
+                <aside class="notes">
+                    <p>OpenGL 3.1 uitgekomen in 2009</p>
+                </aside>
+            </section>
+            <section>
+                <h2>Architectuur</h2>
+                <img src="" />
+            </section>
+        </section>
                 <!-- inter-slide links
 				<section>
 					<h2>Intergalactic Interconnections</h2>
