--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <h2>Moeilijkheden & Keuzes</h2>
                 <ul>
                     <li>OpenGL Compatibiliteit</li>
-                    <ul class="arrows">
+                    <ul class="custom arrows">
                         <li>GL 3.1 + Compatibility Profile</li>
                     </ul>
                     <li>Gebruik van shaders? Uiteindelijk niet.</li>
@@ -189,7 +189,27 @@
             </section>
             <section>
                 <h2>Architectuur</h2>
-                <img src="" />
+                <img class="custom" src="img/visualisation_arch.png" />
+                <ul>
+                    <li>Alle implementatie in GLDrawer</li>
+                    <ul class="custom arrows">
+                        <li>Zeer low level</li>
+                        <li>Performantiewinst</li>
+                    </ul>
+                </ul>
+            </section>
+            <section>
+                <h2>Vergelijking</h2>
+                <img src="img/comparison_qt.png" />
+                <img src="img/comparison_gl.png" style="padding-left:50px;"/>
+            </section>
+            <section>
+                <h2>Resultaat</h2>
+                <img src="img/simulation.gif" />
+            </section>
+            <section>
+                <h2>Feature: Rotatie</h2>
+                <img src="img/rotation2.gif" />
             </section>
         </section>
                 <!-- inter-slide links
