Add some slides about the protocol

--- a/index.html
+++ b/index.html
@@ -184,6 +184,22 @@
 				</code>
 			</section>
 			<section>
+				<h2>Protocol</h2>
+				<h3>Uitzonderingen t.o.v. afgesproken protocol</h3>
+				<ul>
+					<li class="fragment">Ander 'startSimulation' message</li>
+					<ul>
+						<li class="fragment">Ondersteuning van meerdere output formaten op de Master</li>
+					</ul>
+					<li class="fragment">Alle TCP-berichten worden gezipt</li>
+					<ul>
+						<li class="fragment">Zowel voor Distributed session als voor Parex</li>
+						<li class="fragment">Berichten (met SimState) tot meer dan 8 keer kleiner</li>
+						<li class="fragment">Minder bandbreedte wordt gebruikt</li>
+					</ul>
+				</ul>
+			</section>
+			<section>
 				<h2>Slave beheer en Master lookup</h2>
 			</section>
 			<section>
