--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 					<li>Breadth first doorlopen van ptree</li>
 				</ul>
 				<div><img src="img/PlyExample.png" /></div>
-				<!-- voorbeeld PLY file -->
 			</section>
 			<section>
 				<h2>Conversie</h2>
@@ -125,23 +124,23 @@
 				<h2>Post Processing</h2>
 				<ul>
 					<li>Inleiding</li>
-					<li>Formaat</li>
+					<li>tsv Formaat</li>
 					<li>Gui</li>
 				</ul>
 			</section>
 			<section>
 				<h2>Inleiding</h2>
-				<!-- Gui img -->
+				<img src="img/PostProcessingGUI.png" height="400"/>
 			</section>
 			<section>
-				<h2>Formaat</h2>
+				<h2>tsv Formaat</h2>
 				<ul>
 					<li>Design </li>
-					<!-- Design img -->
+					<div><img src="img/TSVFormat.png" height="350"/></div>
 				</il>
 			</section>
 			<section>
-				<h2> Formaat </h2>
+				<h2>tsv Formaat </h2>
 				<ul>
 					<li> 2 vormen </li>
 					<ul>
@@ -159,12 +158,18 @@
 			</section>
 			<section>
 				<h2>GUI</h2>
-				<ul>
-					<li> Load Vleaf file(s) </li>
-					<li> Selection Widget </li>
-					<li> Import/Export Selection </li>
-					<li> Save </li>
-				</ul>
+				<div style="float: left; width: 60%;">
+				</br>
+					<ul>
+						<li> Load Vleaf file(s) </li>
+						<li> Selection Widget </li>
+						<li> Import/Export Selection </li>
+						<li> Save </li>
+					</ul>
+				</div>
+				<div style="float: right; width: 40%;">
+					<img src="img/PostProcessingGUI.png"/>
+				</div>
 			</section>
 		</section>
 		<section>
